@@ -7,14 +7,12 @@
 
 <h4>Duplicated TAL-created Alleles (all providers)  </h4>
 <ul>
-<li><a href="/data/loads/targetedallele/duplicatedAllele.html">Duplicated Alleles html </a></li>
 <li><a href="/data/loads/targetedallele/duplicatedAllele.rpt">Duplicated Alleles text</a></li>
 </ul>
 
 <h4>KOMP CSD Wtsi  </h4>
 <h4>Reports </h4>
 <ul>
-<li><a href="/data/loads/targetedallele/csd_load_wtsi/reports/AbandonedAllele.html">Abandoned Allele html </a></li>
 <li><a href="/data/loads/targetedallele/csd_load_wtsi/reports/AbandonedAllele.rpt">Abandoned Allele text</a></li>
 </ul>
 
@@ -28,7 +26,6 @@
 <h4>KOMP CSD Mbp </h4>
 <h4>Reports </h4>
 <ul>
-<li><a href="/data/loads/targetedallele/csd_load_mbp/reports/AbandonedAllele.html">Abandoned Allele html </a></li>
 <li><a href="/data/loads/targetedallele/csd_load_mbp/reports/AbandonedAllele.rpt">Abandoned Allele text</a></li>
 </ul>
 
@@ -42,7 +39,6 @@
 <h4>EUCOMM Wtsi </h4>
 <h4>Reports </h4>
 <ul>
-<li><a href="/data/loads/targetedallele/eucomm_load_wtsi/reports/AbandonedAllele.html">Abandoned Allele html </a></li>
 <li><a href="/data/loads/targetedallele/eucomm_load_wtsi/reports/AbandonedAllele.rpt">Abandoned Allele text</a></li>
 </ul>
 
@@ -56,8 +52,7 @@
 <h4>EUCOMM Hmgu </h4>
 <h4>Reports </h4>
 <ul>
-<li><a href="/data/loads/targetedallele/eucomm_load_hmgu/reports/AbandonedAllele.html">Abandoned Allele html </a></li>
-<li><a href="/data/loads/targetedallele/eucomm_load_hmgui/reports/AbandonedAllele.rpt">Abandoned Allele text</a></li>
+<li><a href="/data/loads/targetedallele/eucomm_load_hmgu/reports/AbandonedAllele.rpt">Abandoned Allele text</a></li>
 </ul>
 
 
